# ChangeLog for media-libs/libass
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libass/ChangeLog,v 1.80 2014/12/03 17:09:06 aballier Exp $

*libass-0.12.0 (03 Dec 2014)

  03 Dec 2014; Alexis Ballier <aballier@gentoo.org> +libass-0.12.0.ebuild:
  version bump, bug #528758 by tokiclover

  11 Oct 2014; Markus Meier <maekke@gentoo.org> libass-0.11.2.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> libass-0.11.2.ebuild:
  Stable for HPPA (bug #512012).

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libass-0.11.2.ebuild:
  Stable for amd64, wrt bug #512912

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> libass-0.11.1.ebuild,
  libass-0.11.2.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*libass-0.11.2 (30 Apr 2014)

  30 Apr 2014; Tim Harder <radhermit@gentoo.org> +libass-0.11.2.ebuild:
  Version bump.

*libass-0.11.1 (09 Mar 2014)

  09 Mar 2014; Alexis Ballier <aballier@gentoo.org> +libass-0.11.1.ebuild:
  version bump and convert to multilib

  04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org> libass-0.10.2.ebuild:
  Add ~mips keyword.

*libass-0.10.2 (22 Jan 2014)

  22 Jan 2014; Tim Harder <radhermit@gentoo.org> +libass-0.10.2.ebuild: