@@ -6,19 +6,21 @@ DIST libass-0.10.2.tar.xz 278244 SHA256 f02afcc6410b800f0007dc7c282e897dab64f817
 DIST libass-0.11.1.tar.xz 297016 SHA256 9d773a2880114ae4edc4b7686ed67219348d932c24e322ffd7d4c1d97e8813ac SHA512 16b047f688c9d9804d402e7a30377bc98ddadb5d464d621e6e035521532b9ff1e86d0e144e7c5089782afc6ac42ab934b03d75c1c4972fbaea7d8949f732ff62 WHIRLPOOL d89e1eea227cccf09f5267dcd853d07c5981359d8714aa541c3bd03a4e1b438fec4162c0a5fd0fe14cde9d8774f12a0473e24f62e3100fd880259c9248b04055
 DIST libass-0.11.2.tar.xz 297172 SHA256 499dbaf14d7743e5899c9ca918988e81a9894f674b22d4682922f2e5d095ff9e SHA512 93e7b9ce328fc8ac7555c49015baf89c2f07957e501e3ea9ee5a2a7750c1454891a202a92f1348aef27c877bf01674bb7958b7e500c59538b67fe68a89315540 WHIRLPOOL 9c0e0b869efc815e9ecd0e0dfa0488b9643404bd8fc33fe4be2cbf7c026989b27ee7eeb6d8f11218d903881629d864b52bdb0f3a7433325f03b0a6c5a21d1d23
 DIST libass-0.12.0.tar.xz 310412 SHA256 0f34e9b4d1badbe85f2865e308d191b311f12266f9612a0fbf995ea8436bae29 SHA512 329727064ac1c90f1bfe449548a2b4d9e5b02346eb43c69b4e9623227efc19e91690950540fac7465aa44bd351103f17fa075f71836a1aa3400ee0647995a197 WHIRLPOOL 51aa187e10916c9d21902dbc1cd3418209f3df181b99392a2cd5271cc3d1eead09321240b3edd2e1a45c5658b6333afca2a8b9dba97c8bb32ea62d903920e764
+DIST libass-0.12.1.tar.xz 312020 SHA256 87864517e482e94130864ad9e4217c3925119e8cc0c1509133989997a61592d7 SHA512 ace022b214cdbd0f043037a6be25c2b58e12630717fe839f3a896462e3c7b0ccbb1e33c0128a09bbd416ec6e1e30230d514341a5c5c9190058fdedcf95082c91 WHIRLPOOL b351344437c1d3c780b84dd98c02c786216226019879186c3da659e690e27e23a49be38fb8e302551978fa5e02dcfed13c3ff057ce778757ee04af5433f06f4e
 DIST libass-0.9.13.tar.xz 250536 SHA256 eef55595355cd4dd14b88b61d4e34c7bcfb6060a6b28f5a9ebc7dd5a72b69cc8 SHA512 82c1a280b5cff9dd09f015562db420295a465ce7e80ad51b2f879e347c3a675ea05ac2beaa106c178aa57a390a19eb1ffb90771689e76e2b0619e75673631e0d WHIRLPOOL b1769d3a5b9a14d43447ddaa8c459b5fda4c857abdee270d022cced3d5db93a25059ef4291c0fe27cf235c20507f6c77fdc9c3037d032bad57e1971eaa8436c9
 EBUILD libass-0.10.1.ebuild 1083 SHA256 d9569bb1b76e5b177e1fed2c81f2715c43386947a864b6b32fbd3b6e966d2162 SHA512 e58bd87e6bcd6add140dc036d5f4b5ff013acd03ca43c4ef4c16cc857f4a53d34bd2317c48c980d789fb3e9050e648d4578418eb249b417c8414e488515db34d WHIRLPOOL 5ba848370b9bed53f0c3f62e07c704535ff90b4e515258658580149629b86b367ec4694e58f039703def3c3cd5f98d1b255f733b203e26d8637dcb6a368b6a6d
 EBUILD libass-0.10.2.ebuild 1147 SHA256 bfc7f626f6a6153fb03167887f44d5bf2bbe4438d5b450c236cf61eb42722630 SHA512 06f99653dfa0a843419581f54af4cc3e733989c7dd607a4d8d0c732592b63a539ac00fc9b8fe390ae799727e62c18b73d4f05c865796f8cf1031c81a9a2bc380 WHIRLPOOL bddf1ca0658b829c0b222caa5b6e389d2474065a87b1a551bf7e1ed1d5e6469c9bb13ec483e70840555ceb194e7a4f8a22250e302aa869a06ccf01a4108cc10b
 EBUILD libass-0.11.1.ebuild 1494 SHA256 46680d2ed2ac1460bc08d83bf732a80d18f0303e234ba6da558b8f343fb80910 SHA512 a006d0fd77006161ff90274218756b85854cbb7ed789d87584a0b158c02d974316df6ee74351678a02255dc7e709f025a128766d8e41ccc23dc76413602344a6 WHIRLPOOL 266e587990c710642cbca177917b3bb7bcd86f4f774d4552fdb87b75bc5e73b0a295c9939ef7965d3d92103438675e2cd41480399ce95a953b7afb8b6bedb4e8
 EBUILD libass-0.11.2.ebuild 1486 SHA256 957435dfd86ff5e2f9a8fb723c87e5c3c0778a3aa0eefc36ab2a00e52015306c SHA512 16c5d643c305daa3c4bea9d5258734d331dd236311f4fcc1d97eda754d0b11bc9b36d49aa010271ea204e200ce560be8c6e2c4b69f51036ad750c6eed0915401 WHIRLPOOL e70ab35a512eb1dbfe191697f4b80539b4ce07b37ccdeb457d336f882c9bf5c969cecb5b0b390c0eccf1bf50858be2f0173e938a1ae6f7fd8311fbfb238e4594
 EBUILD libass-0.12.0.ebuild 1496 SHA256 4a6adb9a5b06ada7892f6fb2eea3feecd722997dd3e28152048d709c93613727 SHA512 6d35bc550cfb53b6c602692256f60223a1055a218a47c1aae8734335391cc36b469417cba9c18c5d114c9a3828e1e8cde3de6cb1d9ffaaa8fd1611e423a93839 WHIRLPOOL 990619157e749d8c8e3ddbb0219d6564180cd359e3b3160bc72c226acb39130c25c9a0eb47e244bc182035dbb8164a0488e12ec58e809ec0c35be32ce295a1b9
+EBUILD libass-0.12.1.ebuild 1496 SHA256 2d5673be935e7c0212e487a6315be10f309e1e0258d4c1bca2195d218141bfc2 SHA512 0e6d10d5bbc5043b525db1a0d7b5a40c923e2b0db071783257c646cea4faf926c31dec4fe81728349b59bb033ccc9f920506aa78f0aead4ec41b5fcf23556b87 WHIRLPOOL 06c16595a9ef9e93e821e0ce8019eb24d57ef34bf57a9b186ce6a6862d15efcb2f5b01bfaa38f93f716abd4b3a27090ab0692a1da58bc665e162ae2f183b6995
 EBUILD libass-0.9.13.ebuild 967 SHA256 7f2ce48375b9ef07c513cc2f19a7ed8f9e28cb43af96dfc956eedf1235491225 SHA512 c50ec13570796ac2d4573226c182e997dd1b14a4ad702d157684e3d06ccc6be1591352c149a6175a7cb6388442753ae1233fbc47b7ce3469d9ea8aa34b35b855 WHIRLPOOL 4cc33f058f4acbbe6d5f84ebed02dcdfdd2df34734bfe62ba465fd3f390e022adde89a31050d56163a8330766602a518b0d8dca9232dd7cb9b37a8ec3a55c683
-MISC ChangeLog 10037 SHA256 16dda60c9d1ba592cbd483bf9d7befcb3da01158f39c7e7c65b530650a2273b8 SHA512 8b5c14bee557472f106c420bbf952ccef9a7a4d46a45adb2ec79d40bd4150eeaa87f5cae8f3395e424eaef5f55ea807097058f553f05e392803070cd69556dbd WHIRLPOOL 2e87238a758f82fd5bb15676f6a4fd318436683c0672118da86f6fd8315026d30721afcf7c071f313888f270b2a191ecfc9718a2544a17715118410b2bf9007a
+MISC ChangeLog 10158 SHA256 4279fd8a63ecbb0068255e2ba7f9962a88b0afac47dfa58d32f4490561deb0b5 SHA512 cf13c5c3e35886d975b08e59cdbfbfdcd48887e07948030ffa887a6b8493c2f924725fd5f1d7e470bf28327ff0c6805bbdacfd143ab658eb004d33bc73313f14 WHIRLPOOL c35f199c7808530c77258cac6b875ea8820dc54b08cb5abd09fedd7cb787ec7f8d65e0fa40512cb4d4d13f4a88c87386321d97cb85586847b8c7b46ab6789929
 MISC metadata.xml 409 SHA256 1c11ee8622d14f7e37288db8b5ebaf9e5aaa1d8bcaf850cdcad5883bfa99edf5 SHA512 e973ac3980de43932940248becd35613152c7a3dfab41e5e9933f3131cd435cea90ad459cff84f459127e53590ebea39b9beb50666cc9296cbe4d602831d290a WHIRLPOOL 66701d01ca2029e0155b741fba4f82467d078404cb1eaf0a74b5e496f508d06dae123c7befb8f2837601286a6b68caf5acc1f9aeda5381d40f113cc9a02bc2e8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlR/Q7MACgkQvFcC4BYPU0qmpgCfVXaP2pv33URSj4zVHoYIbc7h
-wlkAn3ubkS59qh0I/GjWzBvhwcRduRsa
-=SAl0
+iEYEAREIAAYFAlTHl9sACgkQvFcC4BYPU0oWCwCgl/ZKvcAOZlQYv8HO+kIo0PI0
+aMAAn3hV8xd8bWNJq4EcIiUewZxxdjhv
+=NLx/
 -----END PGP SIGNATURE-----
